exports[`varsReducer add call record 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": 1,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": undefined,
      "job": undefined,
      "name": "Test SPI",
      "org": undefined,
      "roles": undefined,
      "siteId": 8,
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer add case 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": "b72540f9163ef35a05213611e012f2bdf8ccefb3",
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": "b72540f9163ef35a05213611e012f2bdf8ccefb3",
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": undefined,
      "job": undefined,
      "name": "Test SPI",
      "org": undefined,
      "roles": undefined,
      "siteId": 8,
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer add template 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": "a72540f9163ef35a05213611e012f2bdf8ccefb3",
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": "a72540f9163ef35a05213611e012f2bdf8ccefb3",
  "editingTemplateMacro": Object {
    "current": "",
    "initial": "",
  },
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": undefined,
      "job": undefined,
      "name": "Test SPI",
      "org": undefined,
      "roles": undefined,
      "siteId": 8,
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {
    "template": Object {
      "_attachments": Object {},
      "_id": "a72540f9163ef35a05213611e012f2bdf8ccefb3",
      "_rev": "",
      "agents": Array [],
      "appKeyId": "",
      "careTeam": Array [
        8,
      ],
      "communications": Array [
        Object {
          "deleted": false,
          "direction": "incoming",
          "endTimestamp": null,
          "history": Object {
            "agents": Object {},
            "features": Object {
              "descriptors": "",
              "outcome": "",
              "pastDescriptors": Object {},
              "when": "",
            },
            "investigations": Object {},
            "patient": Object {
              "age": null,
              "ageGroup": Array [
                null,
                "adult",
              ],
              "ageUnits": null,
              "ageYears": null,
              "animalType": null,
              "category": Array [
                null,
                "human",
              ],
              "circumstance": null,
              "gender": null,
              "localityAddress1": null,
              "localityCity": null,
              "localityCountry": null,
              "localityGeometry": Array [
                null,
                Object {},
              ],
              "localityISOCountry": null,
              "localityLocation": null,
              "localityName": null,
              "localityPlaceId": null,
              "localityPostcode": null,
              "localityState": null,
              "localityTelephone": null,
              "medicalRecordNumberEnc": null,
              "nameEnc": null,
              "occupation": Array [
                null,
                "unknown",
              ],
              "outcome": null,
              "poisonSeverityScore": Array [
                null,
                "Moderate",
              ],
              "pregnantLactating": Array [
                null,
                "unknown",
              ],
              "pregnantStatus": Array [
                null,
                "unknown",
              ],
              "pregnantTrimester": Array [
                null,
                "unknown",
              ],
              "pregnantTrimesterUnknown": null,
              "riskAssessment": Array [
                null,
                "Moderate Risk",
              ],
              "topic": null,
              "weight": null,
              "weightUnits": Array [
                null,
                "kg",
              ],
            },
            "treatments": Object {
              "pastTreatments": Object {},
              "referrals": Array [],
              "treatments": Array [],
            },
          },
          "interlocutor": Object {
            "category": "",
            "contact": "",
            "nameEnc": "",
            "organisation": Object {
              "address1": "",
              "address2": "",
              "city": "",
              "country": "",
              "geometry": Object {},
              "isoCountry": "",
              "location": "",
              "name": "",
              "placeId": "",
              "postcode": "",
              "state": "",
              "telephone": "",
            },
          },
          "medium": Object {
            "detailEnc": "",
            "type": "Phone",
          },
          "noteRef": "b72540f9163ef35a05213611e012f2bdf8ccefb3",
          "sequenceId": 1,
          "spi": Object {
            "id": undefined,
            "job": undefined,
            "name": "Test SPI",
            "org": undefined,
            "roles": undefined,
            "siteId": 8,
          },
          "timestamp": "2018-03-04T04:59:13.805Z",
          "type": "comms",
        },
      ],
      "features": Array [
        Object {
          "descriptors": Object {},
          "spi": Object {
            "id": undefined,
            "job": undefined,
            "name": "Test SPI",
            "org": undefined,
            "roles": undefined,
            "siteId": 8,
          },
          "timestamp": "2018-03-04T04:59:13.805Z",
          "when": "at",
        },
      ],
      "incidentId": "",
      "investigations": Array [],
      "naturalId": "",
      "notes": Object {
        "b72540f9163ef35a05213611e012f2bdf8ccefb3": Object {
          "attachments": Array [],
          "content": "",
          "context": "general",
          "id": "b72540f9163ef35a05213611e012f2bdf8ccefb3",
          "spi": Object {
            "id": undefined,
            "job": undefined,
            "name": "Test SPI",
            "org": undefined,
            "roles": undefined,
            "siteId": 8,
          },
          "subcontext": "",
          "timestamp": "2018-03-04T04:59:13.805Z",
          "title": "",
        },
      },
      "outcome": "",
      "patient": Object {
        "age": "",
        "ageGroup": "adult",
        "ageUnits": "years",
        "ageYears": "",
        "animalType": "",
        "category": "human",
        "circumstance": "",
        "gender": "",
        "locality": Object {
          "address1": "",
          "address2": "",
          "city": "",
          "country": "",
          "geometry": Object {},
          "isoCountry": "",
          "location": "",
          "name": "",
          "placeId": "",
          "postcode": "",
          "state": "",
          "telephone": "",
        },
        "medicalRecordNumberEnc": "",
        "nameEnc": "",
        "occupation": "unknown",
        "poisonSeverityScore": "Moderate",
        "pregnant": Object {
          "lactating": "unknown",
          "status": "unknown",
          "trimester": "unknown",
          "trimesterUnknown": null,
        },
        "riskAssessment": "Moderate Risk",
        "weight": "",
        "weightUnits": "kg",
      },
      "referrals": Array [],
      "siteCreated": 8,
      "status": "open",
      "timestamp": "2018-03-04T04:59:13.805Z",
      "topic": "",
      "treatments": Array [],
      "type": "case",
    },
  },
}
`;

exports[`varsReducer change form 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "New form password",
    "username": "New form user",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer clear error 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer delete template 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer display record 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": 1,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer display template 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": 2,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer edit template 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": "a72540f9163ef35a05213611e012f2bdf8ccefb3",
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": "a72540f9163ef35a05213611e012f2bdf8ccefb3",
  "editingTemplateMacro": Object {
    "current": "macro",
    "initial": "macro",
  },
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": undefined,
      "job": undefined,
      "name": "Test SPI",
      "org": undefined,
      "roles": undefined,
      "siteId": 8,
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {
    "template": Object {
      "_attachments": Object {},
      "_id": "a72540f9163ef35a05213611e012f2bdf8ccefb3",
      "_rev": "",
      "agents": Array [],
      "appKeyId": "",
      "careTeam": Array [],
      "communications": Array [
        Object {
          "deleted": false,
          "direction": "incoming",
          "endTimestamp": null,
          "history": Object {
            "agents": Object {},
            "features": Object {
              "descriptors": "",
              "outcome": "no impact",
              "pastDescriptors": Object {},
              "when": "at",
            },
            "investigations": Object {},
            "patient": Object {
              "age": null,
              "ageGroup": null,
              "ageUnits": null,
              "ageYears": null,
              "animalType": null,
              "category": null,
              "circumstance": null,
              "gender": null,
              "localityAddress1": null,
              "localityCity": null,
              "localityCountry": null,
              "localityGeometry": null,
              "localityISOCountry": null,
              "localityLocation": null,
              "localityName": null,
              "localityPlaceId": null,
              "localityPostcode": null,
              "localityState": null,
              "localityTelephone": null,
              "medicalRecordNumberEnc": null,
              "nameEnc": null,
              "occupation": null,
              "outcome": null,
              "poisonSeverityScore": null,
              "pregnantLactating": null,
              "pregnantStatus": null,
              "pregnantTrimester": null,
              "pregnantTrimesterUnknown": null,
              "riskAssessment": null,
              "topic": null,
              "weight": null,
              "weightUnits": null,
            },
            "treatments": Object {
              "pastTreatments": Object {},
              "referrals": Array [],
              "treatments": Array [],
            },
          },
          "interlocutor": Object {
            "category": "",
            "contact": "",
            "nameEnc": "",
            "organisation": Object {
              "address1": "",
              "address2": "",
              "city": "",
              "country": "",
              "geometry": Object {},
              "isoCountry": "",
              "location": "",
              "name": "",
              "placeId": "",
              "postcode": "",
              "state": "",
              "telephone": "",
            },
          },
          "medium": Object {
            "detailEnc": "",
            "type": "Phone",
          },
          "noteRef": "c72540f9163ef35a05213611e012f2bdf8ccefb3",
          "sequenceId": 1,
          "spi": Object {
            "id": undefined,
            "job": undefined,
            "name": "Test SPI",
            "org": undefined,
            "roles": undefined,
            "siteId": 8,
          },
          "timestamp": "2018-03-04T04:59:13.805Z",
          "type": "comms",
        },
      ],
      "features": Array [
        Object {
          "descriptors": Object {},
          "spi": Object {
            "id": undefined,
            "job": undefined,
            "name": "Test SPI",
            "org": undefined,
            "roles": undefined,
            "siteId": 8,
          },
          "timestamp": "2018-03-04T04:59:13.805Z",
          "when": "at",
        },
      ],
      "incidentId": "",
      "investigations": Array [],
      "naturalId": "",
      "notes": Object {
        "c72540f9163ef35a05213611e012f2bdf8ccefb3": Object {
          "attachments": Array [],
          "content": "",
          "context": "general",
          "id": "c72540f9163ef35a05213611e012f2bdf8ccefb3",
          "spi": Object {
            "id": undefined,
            "job": undefined,
            "name": "Test SPI",
            "org": undefined,
            "roles": undefined,
            "siteId": 8,
          },
          "subcontext": "",
          "timestamp": "2018-03-04T04:59:13.805Z",
          "title": "",
        },
      },
      "outcome": "",
      "patient": Object {
        "age": "",
        "ageGroup": "adult",
        "ageUnits": "years",
        "ageYears": "",
        "animalType": "",
        "category": "human",
        "circumstance": "",
        "gender": "",
        "locality": Object {
          "address1": "",
          "address2": "",
          "city": "",
          "country": "",
          "geometry": Object {},
          "isoCountry": "",
          "location": "",
          "name": "",
          "placeId": "",
          "postcode": "",
          "state": "",
          "telephone": "",
        },
        "medicalRecordNumberEnc": "",
        "nameEnc": "",
        "occupation": "unknown",
        "poisonSeverityScore": "Moderate",
        "pregnant": Object {
          "lactating": "unknown",
          "status": "unknown",
          "trimester": "unknown",
          "trimesterUnknown": null,
        },
        "riskAssessment": "Moderate Risk",
        "weight": "",
        "weightUnits": "kg",
      },
      "referrals": Array [],
      "siteCreated": 1,
      "status": "open",
      "timestamp": "2018-03-04T04:59:13.805Z",
      "topic": "",
      "treatments": Array [],
      "type": "case",
    },
  },
}
`;

exports[`varsReducer end call 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer request error 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": Object {
    "name": "Test error",
  },
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer reset agent view centre name 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer returns the initial state 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer save template 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {
    "template": undefined,
  },
}
`;

exports[`varsReducer sending request 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer set agent tab 1`] = `
Object {
  "activeAgentTab": 2,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer set auth state 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {
    "4A546": "32qrdNUuRMoQ1x75WYJAyHl7jlTHy5G8",
  },
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {
    "abilities": Array [
      "manage users",
      "manage sites",
      "view data analytics",
      "view dashboard",
      "view call records",
      "manage site",
      "view deleted files",
      "administrate users",
      "administrate sites",
      "create call files",
      "add call records",
      "add call notes",
      "manage incidents",
      "manage templates",
    ],
    "application_key": "32qrdNUuRMoQ1x75WYJAyHl7jlTHy5G8",
    "application_key_id": "4A546",
    "exp": 1553752124,
    "iat": 1553741318,
    "iss": "http://pic.local/api/v1/auth/refresh",
    "job": "spi",
    "jti": "KFkP1Cl8JHUYOjyV",
    "name": "Admin",
    "nbf": 1553748524,
    "org": "WA Poisons Information Centre",
    "org_country": "AU",
    "org_postcode": "6009",
    "org_state": "WA",
    "org_street": "Hospital Ave",
    "org_suburb": "Nedlands",
    "phone": "(08) 9999 9990",
    "prv": "87e0af1ef9fd15812fdec97153a14e0b047546aa",
    "roles": Array [
      "administrator",
    ],
    "site_id": 8,
    "site_shortcode": "DEV",
    "sub": 1,
    "theme": "bootstrap",
  },
  "loggedIn": true,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer set tab 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 1,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer set ui mode default 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer set ui mode edit template 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "editTemplate",
  "views": Object {},
}
`;

exports[`varsReducer store key 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {
    "keyId": "key",
  },
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer sw updated 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": true,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer syncing pouch 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer toxicology source updated 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "PoisinDex",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer update agent view centre name 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "Test name",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {},
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;

exports[`varsReducer update template macro 1`] = `
Object {
  "activeAgentTab": 0,
  "activeTab": 0,
  "agentView": Object {
    "attachments": Array [],
    "content": "",
    "show": false,
  },
  "agentViewCentreName": "",
  "applicationKeys": Object {},
  "callRecordId": null,
  "caseListSearch": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "open",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "sex": "",
    "time": "",
  },
  "currentRecordId": null,
  "currentTemplateId": null,
  "currentlySending": false,
  "currentlySyncing": false,
  "editingTemplateId": null,
  "editingTemplateMacro": Object {
    "current": "macro",
  },
  "error": "",
  "formState": Object {
    "password": "",
    "username": "",
  },
  "incidentModal": Object {
    "caseId": "",
    "name": "",
    "selected": "",
    "show": false,
  },
  "investigationsViewRequest": Object {
    "content": "",
  },
  "investigationsViewResult": Object {
    "attachments": Array [],
    "content": "",
    "description": "",
    "requestIx": "",
    "show": false,
  },
  "jwtClaims": Object {},
  "loggedIn": false,
  "macro": "",
  "newCallModal": Object {
    "callerLocation": "",
    "callerOrganisation": "",
    "centreName": "",
    "filter": "all",
    "name": "",
    "naturalId": "",
    "postcode": "",
    "selected": null,
    "sex": "",
    "show": false,
    "time": "",
  },
  "quickView": Object {
    "category": "",
    "centreAgents": Array [],
    "dosage": Object {
      "quantity": "",
      "units": "",
      "unknown": false,
    },
    "eupcs": "",
    "exposure": Object {
      "duration": "",
      "durationUnits": "",
      "durationUnknown": false,
      "route": Array [],
      "timeSince": "",
      "timeSinceUnits": "",
      "timestamp": "",
      "type": "",
    },
    "id": "",
    "intendedUseGiven": "",
    "isPatientsOwnMedication": false,
    "name": "",
    "type": Array [],
  },
  "referralsView": Object {
    "referee": "",
    "refereeSite": "",
    "specialty": "",
  },
  "searchResults": Object {
    "actionBar": Array [],
    "caseList": Array [],
    "newRecord": Array [],
  },
  "swUpdated": false,
  "toxicologySource": "POISINDEX",
  "treatmentsView": Object {
    "content": "",
    "disposition": "",
    "spi": Object {
      "id": "",
      "job": "",
      "name": "",
      "org": "",
      "roles": Array [],
      "siteId": "",
    },
    "treatmentList": Array [],
  },
  "uiMode": "default",
  "views": Object {},
}
`;
